--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+   <head>
+     <link rel="stylesheet" href="css/stylesheet.css">
+  </head>
+ <body>
 <h1><big> the marauders </big></h1>
+  </body>
+</html>
+
