--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <link rel="stylesheet" href="css/stylesheet.css">
   </head>
  <body>
-<h1><big> the marauders </big></h1>
+<h1><big><font face="cardo" color="grey">the marauders </big></h1>
   </body>
 </html>
 
