--- a/index.html
+++ b/index.html
@@ -4,7 +4,5 @@
      <link rel="stylesheet" href="css/stylesheet.css">
   </head>
  <body>
-<h1><big><font face="courier" color="grey">the marauders </big></h1>
-  </body>
-</html>
+<h1><font face="open sans condensed" color="rgb(249, 163, 137)">mood tracker</
 
