--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
      <link rel="stylesheet" href="css/stylesheet.css">
   </head>
  <body>
-<h1><font face="open sans condensed" color="rgb(249, 163, 137)">mood tracker</
+<h1><font face="open sans condensed" color="rgb(249, 163, 137)">mood tracker
+   
 
