--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
      <link rel="stylesheet" href="css/stylesheet.css">
   </head>
  <body>
-<h1><font face="courier" color="rgb(249, 163, 137)">mood tracker
+<h1>mood tracker
+   <style>
+      h1{ color: rgb(249, 163, 137)
+      }
+   </style>
    
 
