--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <link rel="stylesheet" href="css/stylesheet.css">
   </head>
  <body>
-<h1>mood tracker
+    <h1>mood tracker</h1>
    <style>
       h1{ color: rgb(249, 163, 137)
       }
