--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
    <head>
      <link rel="stylesheet" href="css/stylesheet.css">
   </head>
+   <style>
+      h1{ color: rgb(249, 163, 137)
+      }
+   </style>
  <body>
     <h1>mood tracker</h1>
    <style>
