--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <style>
      <link rel="stylesheet" href="css/stylesheet.css">
-      h1{ color: rgb(249, 163, 137)
+      h1{ color: #ffa38c
       }
    </style>
    </head>
